[SC-1856] fixed wrong vertical alignment in the CFO grid

--- a/src/app/cfo/cashflow/cashflow.component.less
+++ b/src/app/cfo/cashflow/cashflow.component.less
@@ -330,23 +330,13 @@
                         }
 
                         &.emptyChildren {
-                            padding-left: 40px;
                             cursor: default;
-
-                            .dx-expand-icon-container {
-                                visibility: hidden;
-                            }
+                            padding-left: 43px !important;
                         }
 
                         &.netChange {
-                            font-weight: 700;
                             cursor: default;
                             text-align: left;
-                            padding-left: 20px;
-
-                            .dx-expand-icon-container {
-                                visibility: hidden;
-                            }
                         }
 
                         &.dx-last-cell {
